Fix : scrollbar hide test

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,13 @@ body {
   max-width: 100vw;
   overflow: hidden;
   user-select: none;
+  
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+html::-webkit-scrollbar {
+  display: none;
 }
 
 a {
