--- a/src/styles/locomotive-scroll.css
+++ b/src/styles/locomotive-scroll.css
@@ -1,7 +1,3 @@
-::-webkit-scrollbar {
-  display: none;
-}
-
 html.has-scroll-smooth {
   overflow: hidden;
 }
